# Server

./: .gitignore  Dockerfile  LICENSE  Makefile  Package.swift  README.md  compose.yaml  docker-compose.yml  main.py  test_ping.py
.github/workflows/: build.yml  build_and_deploy.yml  main.yml  production_deploy.yml  test.yml  testing_deploy.yml
Sources/App/: routes.swift
app/: Dockerfile  README.md  docker-compose.yaml  main.py  openapi.yaml  requirements.txt  settings.py  setup.cfg  setup.py  tox.ini
app/.openapi-generator/: FILES
app/src/: __init__.py  util.py
app/src/models/: __init__.py  base_model_.py  get_ping_response.py
app/src/openapi/: openapi.yaml
app/src/views/: get_ping_controller.py
app/src/web/: main.py  security_api.py
app/src/web/apis/: get_banners_api.py  get_categories_api.py  get_ping_api.py  get_products_api.py
app/src/web/models/: banner.py  category.py  get_ping_response.py  product.py
app/tests/: conftest.py  test_get_banners_api.py  test_get_categories_api.py  test_get_ping_api.py  test_get_ping_controller.py  test_get_products_api.py  test_ping.py
db/: db_config.py  docker-compose.yml  main_db.py
docs/: openapi_config.yaml
docs/api/: api.yaml
nginx/: nginx.conf
tests/: conftest.py  test_ping.py
yandex-cloud/: docker-compose.yaml
