[metadata]
name = web
version = 1.0.0
description = This is api for server FunnyPuny
long_description = file: README.md
keywords = OpenAPI OpenAPI FunnyPuny
python_requires = >= 3.7.*
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
install_requires = fastapi[all]
setup_requires = setuptools
package_dir = =src
packages = find_namespace:

[options.packages.find]
where = src
